--- a/onesystem/src/main/webapp/WEB-INF/web.xml
+++ b/onesystem/src/main/webapp/WEB-INF/web.xml
@@ -15,9 +15,13 @@
   
 	<context-param>  
 	    <param-name>log4jRefreshInterval</param-name>  
-	      <param-value>3000</param-value>  
+	    <param-value>3000</param-value>  
 	 </context-param>  
-
+	 
+   <listener>
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+   </listener> 
+   
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
