--- a/onesystem-web/package.json
+++ b/onesystem-web/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "td",
+  "name": "onesystem",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "",
+  "author": "jkx",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,24 +10,18 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "js-md5": "^0.7.3",
-    "mint-ui": "^2.2.13",
-    "vue": "^2.5.2",
-    "vue-file-upload": "^0.1.9",
-    "vue-resource": "^1.3.4",
-    "vue-router": "^3.0.1"
+    "vue": "^2.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "bootstrap": "^3.3.7",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
@@ -35,7 +29,6 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "jquery": "^3.3.1",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
