--- a/onesystem/src/main/webapp/WEB-INF/web.xml
+++ b/onesystem/src/main/webapp/WEB-INF/web.xml
@@ -7,20 +7,30 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:config/applicationContext.xml</param-value>
 	</context-param>
-	
-	<context-param>  
-    <param-name>log4jConfigLocation</param-name>  
-    <param-value>classpath:config/log4j.properties</param-value>  
-    </context-param>     
-  
-	<context-param>  
-	    <param-name>log4jRefreshInterval</param-name>  
-	    <param-value>3000</param-value>  
-	 </context-param>  
-   
+
+	<context-param>
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>classpath:log4j.properties</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>log4jRefreshInterval</param-name>
+		<param-value>3000</param-value>
+	</context-param>
+
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+	<!-- 解决跨域问题 -->
+	<filter>
+		<filter-name>CorsFilter</filter-name>
+		<filter-class>com.zongqiao.onesystem.configuration.CorsFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>CorsFilter</filter-name>
+		<url-pattern>*.do</url-pattern>
+	</filter-mapping>
 
 	<servlet>
 		<servlet-name>springMVC</servlet-name>
@@ -62,8 +72,8 @@
 		<filter-name>characterEncodingFilter</filter-name>
 		<url-pattern>*.jsp</url-pattern>
 	</filter-mapping>
-	
+
 	<welcome-file-list>
-	  <welcome-file>index.jsp</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
