--- a/onesystem/pom.xml
+++ b/onesystem/pom.xml
@@ -87,6 +87,17 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql.connector.version}</version>
 		</dependency>
+		<!-- RabbitMq jar包 -->
+			<dependency>  
+            <groupId>org.springframework.amqp</groupId>     
+            <artifactId>spring-rabbit</artifactId>  
+            <version>${rabbitmq.connector.version}</version>  
+        </dependency>  
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>${rabbitmq.client.version}</version>
+		</dependency>
 		<!-- servlet接口 -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -124,18 +135,18 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
-		<!-- Redis相关  -->
+		<!-- Redis相关 -->
 		<dependency>
-		    <groupId>redis.clients</groupId>
-		    <artifactId>jedis</artifactId>
-		    <version>2.9.0</version>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
 		</dependency>
-					
-		<dependency>  
-            <groupId>org.springframework.data</groupId>  
-            <artifactId>spring-data-redis</artifactId>  
-            <version>1.7.2.RELEASE</version>  
-        </dependency>  
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>1.7.2.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<!-- Dependency Versions -->
@@ -155,6 +166,8 @@
 		<junit.version>4.11</junit.version>
 		<mockito.version>1.9.5</mockito.version>
 		<mysql.connector.version>5.1.30</mysql.connector.version>
+		<rabbitmq.connector.version>1.6.1.RELEASE</rabbitmq.connector.version>
+		<rabbitmq.client.version>4.0.0</rabbitmq.client.version>
 		<postgresql.version>9.1-901.jdbc4</postgresql.version>
 		<project.build.sourceVersion>1.7</project.build.sourceVersion>
 		<project.build.targetVersion>1.7</project.build.targetVersion>
